ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserForInStatement2/input.ts.stderr
error: Variable declaration list cannot be empty
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserForInStatement2/input.ts:1:9
  |
1 | for (var in X) {
  |         ^

